--- a/paper.bib
+++ b/paper.bib
@@ -1,6 +1,48 @@
-@misc{ssi-international-rse-survey-2018,
-  title={SSI International RSE Survey 2018: What do we know about RSEs?},
-  author={Philippe, Olivier and Hammitzsch, Martin and Janosch, Stephan and van der Walt, Anelda and van Werkhoven, Ben and Hettrick, Simon and Katz, Daniel S. and Leinweber, Katrin and Gesing, Sandra and Druskat, Stephan and Henwood, Scott and May, Nicholas R. and Lohani, Nooriyah P. and Sinha, Manodeep}
-  year={2018},
-  url={https://zenodo.org/records/2585783}
+@software{aleksandra_nenadic_2025_16606960,
+  author       = {Aleksandra Nenadic and
+                  Steve Crouch and
+                  Thomas Kiley and
+                  Matthew and
+                  James Graham and
+                  Toby Hodges and
+                  Sven van der Burg and
+                  JacalynLaird and
+                  Sarah Stevens and
+                  Douglas Lowe and
+                  Sam Mangham and
+                  Frank Löffler and
+                  Sander van Rijn and
+                  Giulia Crocioni and
+                  Harry Saunders and
+                  Tom Neep and
+                  Renato Alves and
+                  Daniel S. Katz and
+                  Aman Goel and
+                  wk9874 and
+                  Jen Reeve and
+                  gkmurphy and
+                  Yuriy Sverchkov and
+                  shartleybham-acuk and
+                  gadgil48 and
+                  Olexandr Konovalov and
+                  Martin Robinson and
+                  Kristian Zarębski and
+                  k-collie and
+                  Jonathan Guyer},
+  title        = {carpentries-incubator/python-intermediate-
+                   development: beta-July2025
+                  },
+  month        = jul,
+  year         = 2025,
+  publisher    = {Zenodo},
+  version      = {beta-July2025},
+  doi          = {10.5281/zenodo.16606960},
+  url          = {https://doi.org/10.5281/zenodo.16606960},
+  swhid        = {swh:1:dir:4e163afdc5932d261104cb14711a1b74f3830e93
+                   ;origin=https://doi.org/10.5281/zenodo.6532056;vis
+                   it=swh:1:snp:c533704377fc2ff7bd185837b8a4da705e9f3
+                   81e;anchor=swh:1:rel:ccaf7af66378454acc2fb3232edb0
+                   4f78d050dde;path=carpentries-incubator-python-
+                   intermediate-development-9c4db4c
+                  },
 }
