Apply suggestion from @bielsnohr
Co-authored-by: Matthew <6177028+bielsnohr@users.noreply.github.com>

--- a/paper.bib
+++ b/paper.bib
@@ -2,7 +2,7 @@
   author       = {Aleksandra Nenadic and
                   Steve Crouch and
                   Thomas Kiley and
-                  Matthew and
+                  Matthew Bluteau and
                   James Graham and
                   Toby Hodges and
                   Sven van der Burg and
