Update paper.bib, generated from citation.cff with github interface button and add including doi

--- a/paper.bib
+++ b/paper.bib
@@ -1,48 +1,8 @@
-@software{aleksandra_nenadic_2025_16606960,
-  author       = {Aleksandra Nenadic and
-                  Steve Crouch and
-                  Thomas Kiley and
-                  Matthew Bluteau and
-                  James Graham and
-                  Toby Hodges and
-                  Sven van der Burg and
-                  JacalynLaird and
-                  Sarah Stevens and
-                  Douglas Lowe and
-                  Sam Mangham and
-                  Frank Löffler and
-                  Sander van Rijn and
-                  Giulia Crocioni and
-                  Harry Saunders and
-                  Tom Neep and
-                  Renato Alves and
-                  Daniel S. Katz and
-                  Aman Goel and
-                  wk9874 and
-                  Jen Reeve and
-                  gkmurphy and
-                  Yuriy Sverchkov and
-                  shartleybham-acuk and
-                  gadgil48 and
-                  Olexandr Konovalov and
-                  Martin Robinson and
-                  Kristian Zarębski and
-                  k-collie and
-                  Jonathan Guyer},
-  title        = {carpentries-incubator/python-intermediate-
-                   development: beta-July2025
-                  },
-  month        = jul,
-  year         = 2025,
-  publisher    = {Zenodo},
-  version      = {beta-July2025},
-  doi          = {10.5281/zenodo.16606960},
-  url          = {https://doi.org/10.5281/zenodo.16606960},
-  swhid        = {swh:1:dir:4e163afdc5932d261104cb14711a1b74f3830e93
-                   ;origin=https://doi.org/10.5281/zenodo.6532056;vis
-                   it=swh:1:snp:c533704377fc2ff7bd185837b8a4da705e9f3
-                   81e;anchor=swh:1:rel:ccaf7af66378454acc2fb3232edb0
-                   4f78d050dde;path=carpentries-incubator-python-
-                   intermediate-development-9c4db4c
-                  },
+@misc{Nenadic_Intermediate_Research_Software_2025,
+author = {Nenadic, Aleksandra and Crouch, Steve and Kiley, Thomas and Silva, Raniere and Michonneau, François and Belkin, Maxim and Graham, James and Wilson, Greg and Bluteau, Matthew and Hodges, Toby and Kamvar, Zhian and van der Burg, Sven and Cabunoc Mayes, Abby and Robinson, Martin and Mangham, Sam and Laird, Jacalyn and Stevens, Sarah and Leinweber, Katrin and Becker, Erin and Rodrigues, João and Lowe, Douglas and Goel, Aman and Graham, Matthew M. and Gopinathan, Devaraj and Camphuijsen, Jaro and Crocioni, Giulia and Close, William and Löffler, Frank and van Rijn, Sander and Saunders, Harry and Field, Matthew and Gadgil, Sanket and Zarębski, Kristian and Collie, Kingsley and Neep, Tom and Alves, Renato and Katz, Daniel and Reeve, Jen and Murphy, G.K. and Sverchkov, Yuriy and Hartley, S. and Konovalov, Olexandr and Guyer, Jonathan},
+month = jul,
+title = {{Intermediate Research Software Development Skills (Python)}},
+url = {https://github.com/carpentries-incubator/python-intermediate-development},
+year = {2025},
+doi = {10.5281/zenodo.16606960}
 }
